--- a/index.html
+++ b/index.html
@@ -4,7 +4,61 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Anthony Fuller — Academic Website</title>
+  <style>
+    :root{
+      --bg: #ffffff;
+      --text: #0b1021;
+      --muted: #56607a;
+      --link: #1a56db;
+      --card: #f5f7fb;
+      --border: #e6e9f2;
+      --accent: #0ea5e9;
+    }
+    @media (prefers-color-scheme: dark){
+      :root{
+        --bg: #0b1021;
+        --text: #e6ebff;
+        --muted: #a8b3cf;
+        --link: #82aaff;
+        --card: #121a35;
+        --border: #253056;
+        --accent: #38bdf8;
+      }
+    }
+    *{box-sizing:border-box}
+    html,body{margin:0;padding:0;background:var(--bg);color:var(--text);font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,"Apple Color Emoji","Segoe UI Emoji";}
+    a{color:var(--link);text-decoration:none}
+    a:hover{text-decoration:underline}
+    .wrap{max-width:980px;margin:0 auto;padding:32px 20px}
+    header{display:flex;gap:24px;align-items:center;flex-wrap:wrap;margin-bottom:20px}
+    .avatar{width:112px;height:112px;border-radius:50%;object-fit:cover;border:2px solid var(--border);background:var(--card)}
+    .title{flex:1 1 420px}
+    h1{font-size:2rem;line-height:1.2;margin:0}
+    .tagline{color:var(--muted);margin-top:6px}
+    nav{margin-top:10px;display:flex;gap:14px;flex-wrap:wrap}
+    nav a{padding:6px 10px;border-radius:999px;border:1px solid var(--border);background:var(--card)}
+    section{padding:24px 0;border-top:1px solid var(--border)}
+    h2{font-size:1.25rem;margin:0 0 12px}
+    .grid{display:grid;grid-template-columns:repeat(12,1fr);gap:16px}
+    .card{grid-column:span 12;background:var(--card);border:1px solid var(--border);border-radius:16px;padding:18px}
+    @media (min-width:820px){
+      .card.half{grid-column:span 6}
+    }
+    ul.clean{margin:8px 0 0 0;padding:0;list-style:none}
+    ul.clean li{margin:10px 0}
+    .pub .title{font-weight:600}
+    .pub .meta{color:var(--muted);font-size:0.95em}
+    .btn{display:inline-flex;align-items:center;gap:8px;padding:8px 12px;border-radius:10px;border:1px solid var(--border);background:var(--card)}
+    .kicker{letter-spacing:.08em;text-transform:uppercase;font-size:.8rem;color:var(--muted)}
+    .footer{margin:24px 0 8px;color:var(--muted);font-size:.9rem}
+    .nowrap{white-space:nowrap}
+    .news time{color:var(--muted);font-variant-numeric:tabular-nums}
+    .pill{display:inline-block;background:var(--accent);color:white;border-radius:999px;padding:2px 8px;font-size:.72rem;margin-left:8px}
+    .mono{font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,"Ubuntu Mono",Consolas,monospace}
+    .sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);white-space:nowrap;border:0}
+  </style>
 </head>
+
 <body>
   <a class="sr-only" href="#content">Skip to content</a>
   <div class="wrap">
