--- a/index.html
+++ b/index.html
@@ -76,10 +76,9 @@
           I’m a researcher focused on efficient, plain Vision Transformers (ViTs), self-supervised learning, and multi-modal representation learning.
         </p>
         <p>
-          <a class="btn" href="mailto:anthony@example.com">📧 Email</a>
-          <a class="btn" href="https://scholar.google.com" target="_blank" rel="noopener">📚 Google Scholar</a>
-          <a class="btn" href="https://github.com/antofuller" target="_blank" rel="noopener">💻 GitHub</a>
-          <a class="btn" href="https://x.com" target="_blank" rel="noopener">𝕏</a>
+          <a class="btn" href="mailto:anthonydavidfuller@gmail.com">anthonydavidfuller@gmail.com</a>
+          <a class="btn" href="https://scholar.google.ca/citations?user=9NvupxcAAAAJ" target="_blank" rel="noopener">Google Scholar</a>
+          <a class="btn" href="https://github.com/antofuller" target="_blank" rel="noopener">GitHub</a>
         </p>
       </section>
 
