--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
         <p>
           I’m a researcher focused on efficient, plain Vision Transformers (ViTs), self-supervised learning, and multi-modal representation learning.
         </p>
-        <p>
-          <a class="btn" href="mailto:anthonydavidfuller@gmail.com">anthonydavidfuller@gmail.com</a>
-          <a class="btn" href="https://scholar.google.ca/citations?user=9NvupxcAAAAJ" target="_blank" rel="noopener">Google Scholar</a>
-          <a class="btn" href="https://github.com/antofuller" target="_blank" rel="noopener">GitHub</a>
-        </p>
+      <p>
+        <a href="mailto:anthonydavidfuller@gmail.com">anthonydavidfuller@gmail.com</a> /
+        <a href="https://scholar.google.ca/citations?user=9NvupxcAAAAJ" target="_blank" rel="noopener">Google Scholar</a> /
+        <a href="https://github.com/antofuller" target="_blank" rel="noopener">GitHub</a>
+      </p>
       </section>
 
       <section id="publications">
