--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <section id="about">
         <h2>About</h2>
         <p>
-          I’m a researcher focused on efficient, plain Vision Transformers (ViTs), self-supervised learning, and multi-modal representation learning.
+          I’m a 3rd/final-year PhD student at Carleton University supervised by <a href="https://www.sce.carleton.ca/faculty/green/green.php">Jim Green</a> (from Carleton) and <a href="https://imaginarynumber.net/research/">Evan Shelhamer</a> (from UBC / Vector).
         </p>
       <p>
         <a href="mailto:anthonydavidfuller@gmail.com">anthonydavidfuller@gmail.com</a> /
