--- a/index.html
+++ b/index.html
@@ -71,9 +71,8 @@
 
     <main id="content">
       <section id="about">
-        <h2>About</h2>
         <p>
-          I’m a 3rd/final-year PhD student at Carleton University supervised by <a href="https://www.sce.carleton.ca/faculty/green/green.php">Jim Green</a> (from Carleton) and <a href="https://imaginarynumber.net/research/">Evan Shelhamer</a> (from UBC / Vector).
+          I’m a 3rd/final-year PhD student at Carleton University supervised by <a href="https://www.sce.carleton.ca/faculty/green/green.php">Jim Green</a> (from Carleton) and <a href="https://imaginarynumber.net/research/">Evan Shelhamer</a> (from UBC / Vector). I'm interested in deep learning, specifically, self-supervised learning, transformers, and applications (e.g., remote sensing and biomedical).
         </p>
       <p>
         <a href="mailto:anthonydavidfuller@gmail.com">anthonydavidfuller@gmail.com</a> /
