--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <main id="content">
       <section id="about">
         <p>
-          I’m a 3rd/final-year PhD student at Carleton University supervised by <a href="https://www.sce.carleton.ca/faculty/green/green.php">Jim Green</a> (from Carleton) and <a href="https://imaginarynumber.net/research/">Evan Shelhamer</a> (from UBC / Vector). I'm interested in deep learning, specifically, self-supervised learning, transformers, and applications (e.g., remote sensing and biomedical).
+          I’m a 3rd/final-year PhD student at Carleton University supervised by <a href="https://www.sce.carleton.ca/faculty/green/green.php">Jim Green</a> (from Carleton) and <a href="https://imaginarynumber.net/research/">Evan Shelhamer</a> (from UBC / Vector Institute). I'm interested in deep learning, specifically, self-supervised learning, transformers, and applications (e.g., remote sensing and biomedical). I have an M.A.Sc. in Systems and Computer Engineering (2023) and a B.Eng in Aerospace Engineering (2015), both from Carleton University.
         </p>
       <p>
         <a href="mailto:anthonydavidfuller@gmail.com">anthonydavidfuller@gmail.com</a> /
@@ -85,8 +85,10 @@
         <h2>Selected Publications</h2>
         <ul class="clean">
           <li class="pub">
-            <div class="title">Jumbo: Compute-Efficient, Plain Vision Transformers via Asymmetric Token-Width</div>
-            <div class="meta">A. Fuller, et al. Under review, 2025. <a href="#">arXiv</a> · <a href="#">code</a> · <a href="#">bibtex</a></div>
+            <div class="title">Simpler Fast Vision Transformers with a Jumbo CLS Token</div>
+            <div class="meta">Anthony Fuller, Yousef Yassin, Daniel G. Kyrollos, Evan Shelhamer, James R. Green
+              <a href="#">arXiv</a> · <a href="#">code</a> · <a href="#">bibtex</a>
+            </div>
           </li>
           <li class="pub">
             <div class="title">CROMA: Cross-Modal Self-Supervision with 2D-ALiBi</div>
