--- a/index.html
+++ b/index.html
@@ -86,17 +86,63 @@
         <ul class="clean">
           <li class="pub">
             <div class="title">Simpler Fast Vision Transformers with a Jumbo CLS Token</div>
-            <div class="meta">Anthony Fuller, Yousef Yassin, Daniel G. Kyrollos, Evan Shelhamer, James R. Green
-              <a href="#">arXiv</a> · <a href="#">code</a> · <a href="#">bibtex</a>
+            <div class="meta">
+              Anthony Fuller, Yousef Yassin, Daniel G. Kyrollos, Evan Shelhamer, James R. Green
+            </div>
+            <div class="meta">
+              arXiv, 2025
+            </div>
+            <div class="meta">
+              <a href="https://arxiv.org/abs/2502.15021">arXiv</a> / <a href="https://github.com/antofuller/jumbo">code</a> / <a href="#">bibtex</a>
             </div>
           </li>
           <li class="pub">
-            <div class="title">CROMA: Cross-Modal Self-Supervision with 2D-ALiBi</div>
-            <div class="meta">NeurIPS 2023. <a href="#">paper</a> · <a href="#">code</a></div>
+            <div class="title">Simpler Fast Vision Transformers with a Jumbo CLS Token</div>
+            <div class="meta">
+              Anthony Fuller, Yousef Yassin, Daniel G. Kyrollos, Evan Shelhamer, James R. Green
+            </div>
+            <div class="meta">
+              arXiv, 2025
+            </div>
+            <div class="meta">
+              <a href="https://arxiv.org/abs/2502.15021">arXiv</a> / <a href="https://github.com/antofuller/jumbo">code</a> / <a href="#">bibtex</a>
+            </div>
           </li>
           <li class="pub">
-            <div class="title">SatViT: Self-Supervised Transformers for Remote Sensing</div>
-            <div class="meta">IEEE GRSL 2022. <a href="#">paper</a></div>
+            <div class="title">Simpler Fast Vision Transformers with a Jumbo CLS Token</div>
+            <div class="meta">
+              Anthony Fuller, Yousef Yassin, Daniel G. Kyrollos, Evan Shelhamer, James R. Green
+            </div>
+            <div class="meta">
+              arXiv, 2025
+            </div>
+            <div class="meta">
+              <a href="https://arxiv.org/abs/2502.15021">arXiv</a> / <a href="https://github.com/antofuller/jumbo">code</a> / <a href="#">bibtex</a>
+            </div>
+          </li>
+          <li class="pub">
+            <div class="title">Simpler Fast Vision Transformers with a Jumbo CLS Token</div>
+            <div class="meta">
+              Anthony Fuller, Yousef Yassin, Daniel G. Kyrollos, Evan Shelhamer, James R. Green
+            </div>
+            <div class="meta">
+              arXiv, 2025
+            </div>
+            <div class="meta">
+              <a href="https://arxiv.org/abs/2502.15021">arXiv</a> / <a href="https://github.com/antofuller/jumbo">code</a> / <a href="#">bibtex</a>
+            </div>
+          </li>
+          <li class="pub">
+            <div class="title">Simpler Fast Vision Transformers with a Jumbo CLS Token</div>
+            <div class="meta">
+              Anthony Fuller, Yousef Yassin, Daniel G. Kyrollos, Evan Shelhamer, James R. Green
+            </div>
+            <div class="meta">
+              arXiv, 2025
+            </div>
+            <div class="meta">
+              <a href="https://arxiv.org/abs/2502.15021">arXiv</a> / <a href="https://github.com/antofuller/jumbo">code</a> / <a href="#">bibtex</a>
+            </div>
           </li>
         </ul>
         <p class="mono" style="font-size:.9rem">Tip: replace the placeholders above with your real links, or duplicate an <code>&lt;li class="pub"&gt;</code> for more entries.</p>
