--- a/index.html
+++ b/index.html
@@ -97,15 +97,15 @@
             </div>
           </li>
           <li class="pub">
-            <div class="title">Simpler Fast Vision Transformers with a Jumbo CLS Token</div>
+            <div class="title">LookWhere? Efficient Visual Recognition by Learning Where to Look and What to See from Self-Supervision</div>
             <div class="meta">
-              Anthony Fuller, Yousef Yassin, Daniel G. Kyrollos, Evan Shelhamer, James R. Green
+              Anthony Fuller, Yousef Yassin, Junfeng Wen, Daniel G. Kyrollos, Tarek Ibrahim, James R. Green, Evan Shelhamer
             </div>
             <div class="meta">
               arXiv, 2025
             </div>
             <div class="meta">
-              <a href="https://arxiv.org/abs/2502.15021">arXiv</a> / <a href="https://github.com/antofuller/jumbo">code</a> / <a href="#">bibtex</a>
+              <a href="https://arxiv.org/abs/2505.18051">arXiv</a> / <a href="https://github.com/antofuller/jumbo">code</a> / <a href="#">bibtex</a>
             </div>
           </li>
           <li class="pub">
