--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
 </head>
 
 <body>
+  <div class="wrap">
+    <main id="content">
         <div style="display: flex; flex-wrap: wrap; gap: 20px; align-items: flex-start; margin-bottom: 2em;">
       
         <!-- Left column -->
