--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       
         <!-- Left column -->
         <div style="flex: 1; min-width: 300px;">
-          <h1>Anthony Fuller</h1>
+          <h1>Anthony Fuller - UNDER ACTIVE CONSTRUCTION</h1>
           <p>
             I am a 3rd/final-year Ph.D. student at Carleton University supervised by <a href="https://www.sce.carleton.ca/faculty/green/green.php">Jim Green</a> (from Carleton) and <a href="https://imaginarynumber.net/research/">Evan Shelhamer</a> (from UBC / Vector Institute).
             I am interested in deep learning, specifically, computer vision, self-supervised learning, transformers, and applications (e.g., remote sensing and biomedical).
