--- a/index.html
+++ b/index.html
@@ -128,15 +128,15 @@
             </div>
           </li>
           <li class="pub">
-            <div class="title">Simpler Fast Vision Transformers with a Jumbo CLS Token</div>
+            <div class="title">CROMA: Remote Sensing Representations with Contrastive Radar-Optical Masked Autoencoders</div>
             <div class="meta">
-              Anthony Fuller, Yousef Yassin, Daniel G. Kyrollos, Evan Shelhamer, James R. Green
+              Anthony Fuller, Koreen Millard, James R. Green
             </div>
             <div class="meta">
-              arXiv, 2025
+              NeurIPS, 2023
             </div>
             <div class="meta">
-              <a href="https://arxiv.org/abs/2502.15021">arXiv</a> / <a href="https://github.com/antofuller/jumbo">code</a> / <a href="#">bibtex</a>
+              <a href="https://arxiv.org/abs/2311.00566">arXiv</a> / <a href="https://github.com/antofuller/CROMA">code</a> / <a href="#">bibtex</a>
             </div>
           </li>
           <li class="pub">
