--- a/index.html
+++ b/index.html
@@ -116,15 +116,15 @@
             </div>
           </li>
           <li class="pub">
-            <div class="title">Simpler Fast Vision Transformers with a Jumbo CLS Token</div>
+            <div class="title">LookHere: Vision Transformers with Directed Attention Generalize and Extrapolate</div>
             <div class="meta">
-              Anthony Fuller, Yousef Yassin, Daniel G. Kyrollos, Evan Shelhamer, James R. Green
+              Anthony Fuller, Daniel G. Kyrollos, Yousef Yassin, James R. Green
             </div>
             <div class="meta">
               arXiv, 2025
             </div>
             <div class="meta">
-              <a href="https://arxiv.org/abs/2502.15021">arXiv</a> / <a href="https://github.com/antofuller/jumbo">code</a> / <a href="#">bibtex</a>
+              <a href="https://arxiv.org/abs/2405.13985">arXiv</a> / <a href="https://github.com/GreenCUBIC/lookhere">code</a> / <a href="#">bibtex</a>
             </div>
           </li>
           <li class="pub">
