--- a/index.html
+++ b/index.html
@@ -140,15 +140,15 @@
             </div>
           </li>
           <li class="pub">
-            <div class="title">Simpler Fast Vision Transformers with a Jumbo CLS Token</div>
+            <div class="title">SatViT: Pretraining Transformers for Earth Observation</div>
             <div class="meta">
-              Anthony Fuller, Yousef Yassin, Daniel G. Kyrollos, Evan Shelhamer, James R. Green
+              Anthony Fuller, Koreen Millard, James R. Green
             </div>
             <div class="meta">
-              arXiv, 2025
+              IEEE Geoscience and Remote Sensing Letters, 2022
             </div>
             <div class="meta">
-              <a href="https://arxiv.org/abs/2502.15021">arXiv</a> / <a href="https://github.com/antofuller/jumbo">code</a> / <a href="#">bibtex</a>
+              <a href="https://ieeexplore.ieee.org/document/9866058">link</a> / <a href="https://github.com/antofuller/SatViT">code</a> / <a href="#">bibtex</a>
             </div>
           </li>
         </ul>
