--- a/index.html
+++ b/index.html
@@ -116,12 +116,24 @@
             </div>
           </li>
           <li class="pub">
+            <div class="title">Galileo: Learning Global & Local Features of Many Remote Sensing Modalities</div>
+            <div class="meta">
+              Gabriel Tseng, Anthony Fuller, Marlena Reil, Henry Herzog, Patrick Beukema, Favyen Bastani, James R. Green, Evan Shelhamer, Hannah Kerner, David Rolnick
+            </div>
+            <div class="meta">
+              ICML, 2025
+            </div>
+            <div class="meta">
+              <a href="https://arxiv.org/abs/2502.09356">arXiv</a> / <a href="https://github.com/nasaharvest/galileo">code</a> / <a href="#">bibtex</a>
+            </div>
+          </li>
+          <li class="pub">
             <div class="title">LookHere: Vision Transformers with Directed Attention Generalize and Extrapolate</div>
             <div class="meta">
               Anthony Fuller, Daniel G. Kyrollos, Yousef Yassin, James R. Green
             </div>
             <div class="meta">
-              arXiv, 2025
+              NeurIPS, 2024
             </div>
             <div class="meta">
               <a href="https://arxiv.org/abs/2405.13985">arXiv</a> / <a href="https://github.com/GreenCUBIC/lookhere">code</a> / <a href="#">bibtex</a>
