--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     }
     .cofirst::after{
       content:"*";
-      color:#e11d48;
+      color:#962E0E;
       font-weight:800;
       font-size:1.25em;
       display:inline-block;
-      transform: translateY(-0.28em); /* raise it */
+      transform: translateY(-0.2em); /* raise it */
       margin-left:.15em;
     }
     *{box-sizing:border-box}
