--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@
       transform: translateY(-0.2em); /* raise it */
       margin-left:.15em;
     }
+    .colast::after{
+      content:"*";
+      color:#2E0E96;
+      font-weight:800;
+      font-size:1.25em;
+      display:inline-block;
+      transform: translateY(-0.2em); /* raise it */
+      margin-left:.15em;
+    }
     *{box-sizing:border-box}
     html,body{margin:0;padding:0;background:var(--bg);color:var(--text);font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,"Apple Color Emoji","Segoe UI Emoji";}
     a{color:var(--link);text-decoration:none}
@@ -114,7 +123,9 @@
             <div class="meta">
               <span class="cofirst">Anthony Fuller</span>,
               <span class="cofirst">Yousef Yassin</span>,
-              Junfeng Wen, Daniel G. Kyrollos, Tarek Ibrahim, James R. Green, Evan Shelhamer
+              Junfeng Wen, Daniel G. Kyrollos, Tarek Ibrahim,
+              <span class="colast">James R. Green</span>,
+              <span class="colast">Evan Shelhamer</span>
 
             </div>
             <div class="meta">
