--- a/index.html
+++ b/index.html
@@ -109,7 +109,9 @@
           <li class="pub">
             <div class="title">Simpler Fast Vision Transformers with a Jumbo CLS Token</div>
             <div class="meta">
-              Anthony Fuller, Yousef Yassin, Daniel G. Kyrollos, Evan Shelhamer, James R. Green
+              Anthony Fuller, Yousef Yassin, Daniel G. Kyrollos,
+              <span class="colast">Evan Shelhamer</span>,
+              <span class="colast">James R. Green</span>
             </div>
             <div class="meta">
               arXiv, 2025
