--- a/index.html
+++ b/index.html
@@ -140,7 +140,11 @@
           <li class="pub">
             <div class="title">Galileo: Learning Global & Local Features of Many Remote Sensing Modalities</div>
             <div class="meta">
-              Gabriel Tseng, Anthony Fuller, Marlena Reil, Henry Herzog, Patrick Beukema, Favyen Bastani, James R. Green, Evan Shelhamer, Hannah Kerner, David Rolnick
+              <span class="cofirst">Gabriel Tseng</span>,
+              <span class="cofirst"><b>Anthony Fuller<\b></span>,
+              Marlena Reil, Henry Herzog, Patrick Beukema, Favyen Bastani, James R. Green, Evan Shelhamer,
+              <span class="colast">Hannah Kerner</span>,
+              <span class="colast">David Rolnick</span>
             </div>
             <div class="meta">
               ICML, 2025
