--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           <li class="pub">
             <div class="title">CROMA: Remote Sensing Representations with Contrastive Radar-Optical Masked Autoencoders</div>
             <div class="meta">
-              Anthony Fuller, Koreen Millard, James R. Green
+              <b>Anthony Fuller<\b>, Koreen Millard, James R. Green
             </div>
             <div class="meta">
               NeurIPS, 2023
@@ -180,7 +180,7 @@
           <li class="pub">
             <div class="title">SatViT: Pretraining Transformers for Earth Observation</div>
             <div class="meta">
-              Anthony Fuller, Koreen Millard, James R. Green
+              <b>Anthony Fuller</b>, Koreen Millard, James R. Green
             </div>
             <div class="meta">
               IEEE Geoscience and Remote Sensing Letters, 2022
