--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           <li class="pub">
             <div class="title">SatViT: Pretraining Transformers for Earth Observation</div>
             <div class="meta">
-              <b>Anthony Fuller</b>, Koreen Millard, James R. Green
+              <strong>Anthony Fuller</strong>, Koreen Millard, James R. Green
             </div>
             <div class="meta">
               IEEE Geoscience and Remote Sensing Letters, 2022
