--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       transform: translateY(-0.1em); /* raise it */
       margin-left:.15em;
     }
+    .author-strong { font-weight:700; color: var(--text); }
     *{box-sizing:border-box}
     html,body{margin:0;padding:0;background:var(--bg);color:var(--text);font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,"Apple Color Emoji","Segoe UI Emoji";}
     a{color:var(--link);text-decoration:none}
@@ -180,7 +181,7 @@
           <li class="pub">
             <div class="title">SatViT: Pretraining Transformers for Earth Observation</div>
             <div class="meta">
-              <strong>Anthony Fuller</strong>, Koreen Millard, James R. Green
+              <span class="author-strong">Anthony Fuller</span>, Koreen Millard, James R. Green
             </div>
             <div class="meta">
               IEEE Geoscience and Remote Sensing Letters, 2022
