--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <div class="title">Galileo: Learning Global & Local Features of Many Remote Sensing Modalities</div>
             <div class="meta">
               <span class="cofirst">Gabriel Tseng</span>,
-              <span class="cofirst"><b>Anthony Fuller<\b></span>,
+              <span class="cofirst">Anthony Fuller</span>,
               Marlena Reil, Henry Herzog, Patrick Beukema, Favyen Bastani, James R. Green, Evan Shelhamer,
               <span class="colast">Hannah Kerner</span>,
               <span class="colast">David Rolnick</span>
@@ -169,7 +169,7 @@
           <li class="pub">
             <div class="title">CROMA: Remote Sensing Representations with Contrastive Radar-Optical Masked Autoencoders</div>
             <div class="meta">
-              <b>Anthony Fuller<\b>, Koreen Millard, James R. Green
+              Anthony Fuller, Koreen Millard, James R. Green
             </div>
             <div class="meta">
               NeurIPS, 2023
