--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     }
     .cofirst::after{
       content:"*";
-      color:#962E0E;
+      color:#EE0077;
       font-weight:800;
       font-size:1.25em;
       display:inline-block;
@@ -35,8 +35,8 @@
       margin-left:.15em;
     }
     .colast::after{
-      content:"*";
-      color:#2E0E96;
+      content:"†";
+      color:#EE0077;
       font-weight:800;
       font-size:1.25em;
       display:inline-block;
