--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       font-weight:800;
       font-size:1.25em;
       display:inline-block;
-      transform: translateY(-0.1em); /* raise it */
+      transform: translateY(-0.05em); /* raise it */
       margin-left:.15em;
     }
     .colast::after{
@@ -40,10 +40,10 @@
       font-weight:800;
       font-size:1.25em;
       display:inline-block;
-      transform: translateY(-0.1em); /* raise it */
+      transform: translateY(-0.05em); /* raise it */
       margin-left:.15em;
     }
-    .author-strong { font-weight:700; color:#00EE77; }
+    .author-strong { font-weight:800; color:#EE0077; }
     *{box-sizing:border-box}
     html,body{margin:0;padding:0;background:var(--bg);color:var(--text);font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,"Apple Color Emoji","Segoe UI Emoji";}
     a{color:var(--link);text-decoration:none}
