--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <li class="pub">
             <div class="title">Simpler Fast Vision Transformers with a Jumbo CLS Token</div>
             <div class="meta">
-              Anthony Fuller, Yousef Yassin, Daniel G. Kyrollos,
+              <span class="author-strong">Anthony Fuller</span>, Yousef Yassin, Daniel G. Kyrollos,
               <span class="colast">Evan Shelhamer</span>,
               <span class="colast">James R. Green</span>
             </div>
@@ -124,7 +124,7 @@
           <li class="pub">
             <div class="title">LookWhere? Efficient Visual Recognition by Learning Where to Look and What to See from Self-Supervision</div>
             <div class="meta">
-              <span class="cofirst">Anthony Fuller</span>,
+              <span class="cofirst"><span class="author-strong">Anthony Fuller</span></span>,
               <span class="cofirst">Yousef Yassin</span>,
               Junfeng Wen, Daniel G. Kyrollos, Tarek Ibrahim,
               <span class="colast">James R. Green</span>,
@@ -142,7 +142,7 @@
             <div class="title">Galileo: Learning Global & Local Features of Many Remote Sensing Modalities</div>
             <div class="meta">
               <span class="cofirst">Gabriel Tseng</span>,
-              <span class="cofirst">Anthony Fuller</span>,
+              <span class="cofirst"><span class="author-strong">Anthony Fuller</span></span>,
               Marlena Reil, Henry Herzog, Patrick Beukema, Favyen Bastani, James R. Green, Evan Shelhamer,
               <span class="colast">Hannah Kerner</span>,
               <span class="colast">David Rolnick</span>
@@ -157,7 +157,7 @@
           <li class="pub">
             <div class="title">LookHere: Vision Transformers with Directed Attention Generalize and Extrapolate</div>
             <div class="meta">
-              Anthony Fuller, Daniel G. Kyrollos, Yousef Yassin, James R. Green
+              <span class="author-strong">Anthony Fuller</span>, Daniel G. Kyrollos, Yousef Yassin, James R. Green
             </div>
             <div class="meta">
               NeurIPS, 2024
@@ -169,7 +169,7 @@
           <li class="pub">
             <div class="title">CROMA: Remote Sensing Representations with Contrastive Radar-Optical Masked Autoencoders</div>
             <div class="meta">
-              Anthony Fuller, Koreen Millard, James R. Green
+              <span class="author-strong">Anthony Fuller</span>, Koreen Millard, James R. Green
             </div>
             <div class="meta">
               NeurIPS, 2023
