--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       
         <!-- Left column -->
         <div style="flex: 1; min-width: 300px;">
-          <h1>Anthony Fuller - UNDER ACTIVE CONSTRUCTION</h1>
+          <h1>Anthony Fuller</h1>
           <p>
             I am a 3rd/final-year Ph.D. student at Carleton University supervised by <a href="https://www.sce.carleton.ca/faculty/green/green.php">Jim Green</a> (from Carleton) and <a href="https://imaginarynumber.net/research/">Evan Shelhamer</a> (from UBC / Vector Institute).
             I am interested in deep learning, specifically, computer vision, self-supervised learning, transformers, and applications (e.g., remote sensing and biomedical).
@@ -106,6 +106,7 @@
       </div>
       <section id="publications">
         <h2>Selected Publications</h2>
+        <span class="cofirst">co-first author</span> / <span class="colast">co-last author</span>
         <ul class="clean">
           <li class="pub">
             <div class="title">Simpler Fast Vision Transformers with a Jumbo CLS Token</div>
