--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               arXiv, 2025
             </div>
             <div class="meta">
-              <a href="https://arxiv.org/abs/2502.15021">arXiv</a> / <a href="https://github.com/antofuller/jumbo">code</a> / <a href="#">bibtex</a>
+              <a href="https://arxiv.org/abs/2502.15021">arXiv</a> / <a href="https://github.com/antofuller/jumbo">code</a>
             </div>
           </li>
           <li class="pub">
@@ -136,7 +136,7 @@
               arXiv, 2025
             </div>
             <div class="meta">
-              <a href="https://arxiv.org/abs/2505.18051">arXiv</a> / <a href="https://github.com/antofuller/jumbo">code</a> / <a href="#">bibtex</a>
+              <a href="https://arxiv.org/abs/2505.18051">arXiv</a> / <a href="https://github.com/antofuller/jumbo">code</a>
             </div>
           </li>
           <li class="pub">
@@ -152,7 +152,7 @@
               ICML, 2025
             </div>
             <div class="meta">
-              <a href="https://arxiv.org/abs/2502.09356">arXiv</a> / <a href="https://github.com/nasaharvest/galileo">code</a> / <a href="#">bibtex</a>
+              <a href="https://arxiv.org/abs/2502.09356">arXiv</a> / <a href="https://github.com/nasaharvest/galileo">code</a>
             </div>
           </li>
           <li class="pub">
@@ -164,7 +164,7 @@
               NeurIPS, 2024
             </div>
             <div class="meta">
-              <a href="https://arxiv.org/abs/2405.13985">arXiv</a> / <a href="https://github.com/GreenCUBIC/lookhere">code</a> / <a href="#">bibtex</a>
+              <a href="https://arxiv.org/abs/2405.13985">arXiv</a> / <a href="https://github.com/GreenCUBIC/lookhere">code</a>
             </div>
           </li>
           <li class="pub">
@@ -176,7 +176,7 @@
               NeurIPS, 2023
             </div>
             <div class="meta">
-              <a href="https://arxiv.org/abs/2311.00566">arXiv</a> / <a href="https://github.com/antofuller/CROMA">code</a> / <a href="#">bibtex</a>
+              <a href="https://arxiv.org/abs/2311.00566">arXiv</a> / <a href="https://github.com/antofuller/CROMA">code</a>
             </div>
           </li>
           <li class="pub">
@@ -188,7 +188,7 @@
               IEEE Geoscience and Remote Sensing Letters, 2022
             </div>
             <div class="meta">
-              <a href="https://ieeexplore.ieee.org/document/9866058">link</a> / <a href="https://github.com/antofuller/SatViT">code</a> / <a href="#">bibtex</a>
+              <a href="https://ieeexplore.ieee.org/document/9866058">link</a> / <a href="https://github.com/antofuller/SatViT">code</a>
             </div>
           </li>
         </ul>
