--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
             </div>
             <div class="meta">
-              arXiv, 2025
+              NeurIPS, 2025
             </div>
             <div class="meta">
               <a href="https://arxiv.org/abs/2505.18051">arXiv</a> / <a href="https://github.com/antofuller/jumbo">code</a>
