--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div style="flex: 1; min-width: 300px;">
           <h1>Anthony Fuller</h1>
           <p>
-            I am a 3rd/final-year Ph.D. student at Carleton University supervised by <a href="https://www.sce.carleton.ca/faculty/green/green.php">Jim Green</a> (from Carleton) and <a href="https://imaginarynumber.net/research/">Evan Shelhamer</a> (from UBC / Vector Institute).
+            I am a 3rd / final-year Ph.D. student at Carleton University / Vector Institute supervised by <a href="https://www.sce.carleton.ca/faculty/green/green.php">Jim Green</a> (from Carleton) and <a href="https://imaginarynumber.net/research/">Evan Shelhamer</a> (from UBC / Vector).
             I am interested in deep learning, specifically, computer vision, self-supervised learning, transformers, and applications (e.g., remote sensing and biomedical).
             I have an M.A.Sc. in Systems and Computer Engineering (2023) and a B.Eng. in Aerospace Engineering (2015), both from Carleton.
           </p>
