--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <span class="cofirst">co-first author</span> / <span class="colast">co-last author</span>
         <ul class="clean">
           <li class="pub">
-            <div class="title">Simpler Fast Vision Transformers with a Jumbo CLS Token</div>
+            <div class="title">Thicker and Quicker: A Jumbo Token for Fast Plain Vision Transformers</div>
             <div class="meta">
               <span class="author-strong">Anthony Fuller</span>, Yousef Yassin, Daniel G. Kyrollos,
               <span class="colast">Evan Shelhamer</span>,
@@ -136,7 +136,7 @@
               NeurIPS, 2025
             </div>
             <div class="meta">
-              <a href="https://arxiv.org/abs/2505.18051">arXiv</a> / <a href="https://github.com/antofuller/jumbo">code</a>
+              <a href="https://arxiv.org/abs/2505.18051">arXiv</a> / <a href="https://github.com/antofuller/lookwhere">code</a>
             </div>
           </li>
           <li class="pub">
