--- a/index.html
+++ b/index.html
@@ -109,6 +109,15 @@
         <span class="cofirst">co-first author</span> / <span class="colast">co-last author</span>
         <ul class="clean">
           <li class="pub">
+            <div class="title">Self-<i>Soup</i>ervision: Cooking Models Soups without Labels</div>
+            <div class="meta">
+              <span class="author-strong">Anthony Fuller</span>, James R. Green, Evan Shelhamer
+            </div>
+            <div class="meta">
+              arXiv (coming very soon), 2026
+            </div>
+          </li>
+          <li class="pub">
             <div class="title">Thicker and Quicker: A Jumbo Token for Fast Plain Vision Transformers</div>
             <div class="meta">
               <span class="author-strong">Anthony Fuller</span>, Yousef Yassin, Daniel G. Kyrollos,
@@ -116,7 +125,7 @@
               <span class="colast">James R. Green</span>
             </div>
             <div class="meta">
-              arXiv, 2025
+              ICLR, 2026
             </div>
             <div class="meta">
               <a href="https://arxiv.org/abs/2502.15021">arXiv</a> / <a href="https://github.com/antofuller/jumbo">code</a>
