--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <span class="cofirst">co-first author</span> / <span class="colast">co-last author</span>
         <ul class="clean">
           <li class="pub">
-            <div class="title">Self-<i>Soup</i>ervision: Cooking Models Soups without Labels</div>
+            <div class="title">Self-<i>Soup</i>ervision: Cooking Model Soups without Labels</div>
             <div class="meta">
               <span class="author-strong">Anthony Fuller</span>, James R. Green, Evan Shelhamer
             </div>
