--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
       .card.half{grid-column:span 6}
     }
     ul.clean{margin:8px 0 0 0;padding:0;list-style:none}
-    ul.clean li{margin:10px 0}
-    .pub .title{font-weight:600}
-    .pub .meta{color:var(--muted);font-size:0.95em}
+    ul.clean li{margin:0}
+    .pub .title{font-weight:600;line-height:1.3;margin-bottom:2px}
+    .pub .meta{color:var(--muted);font-size:0.95em;line-height:1.3;margin:0}
     .btn{display:inline-flex;align-items:center;gap:8px;padding:8px 12px;border-radius:10px;border:1px solid var(--border);background:var(--card)}
     .kicker{letter-spacing:.08em;text-transform:uppercase;font-size:.8rem;color:var(--muted)}
     .footer{margin:24px 0 8px;color:var(--muted);font-size:.9rem}
@@ -80,7 +80,7 @@
     
     /* Alternating paper backgrounds */
     .pub {
-      padding: 16px 20px;
+      padding: 10px 20px;
       margin: 0 -20px;
       border-radius: 8px;
     }
