--- a/index.html
+++ b/index.html
@@ -129,7 +129,10 @@
               <span class="author-strong">Anthony Fuller</span>, James R. Green, Evan Shelhamer
             </div>
             <div class="meta">
-              arXiv (coming very soon), 2026
+              arXiv preprint, 2026
+            </div>
+            <div class="meta">
+              <a href="https://arxiv.org/abs/2602.02890">arXiv</a> / <a href="https://github.com/antofuller/self_soupervision">code</a> / <a href="https://huggingface.co/datasets/antofuller/mini-VTAB">data</a>
             </div>
           </li>
           <li class="pub shade-right">
@@ -188,7 +191,7 @@
               NeurIPS, 2024
             </div>
             <div class="meta">
-              <a href="https://arxiv.org/abs/2405.13985">arXiv</a> / <a href="https://github.com/GreenCUBIC/lookhere">code</a>
+              <a href="https://arxiv.org/abs/2405.13985">arXiv</a> / <a href="https://github.com/GreenCUBIC/lookhere">code</a> / <a href="https://huggingface.co/datasets/antofuller/ImageNet-HR">data</a>
             </div>
           </li>
           <li class="pub shade-right">
